--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
   <title>Rock Paper Scissors</title>
 </head>
 <body>
+
+  <h1>Rock, Paper & Scissors</h1>
+
+  <div id="buttons">
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    <button id="restart" style="display:none;">Play Again</button>
+  </div>
+
+  <div id="results"></div>
+  <div id="score"></div>
  
   <script src="script.js"></script>
 </body>
